# bereal-telegram-bot

./: .gitignore  Dockerfile  README.md  pyproject.toml
bot/: bot.py  config.py  emoji_list.py  run.py
