[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["Evgenia Kivotova <e.kivotova@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
dynaconf = "^3.1.11"
aiogram = "^2.22.2"
emoji = "^2.2.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
